kubernetes/monitoring/prometheus-stack/alertmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: prometheus-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: traefik
      sectionName: websecure
  hostnames:
    - alertmanager.home.lobotechworks.pt
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 1
