kubernetes/monitoring/prometheus-stack/alertmanager_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: prometheus-stack
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - alertmanager.home.lobotechworks.pt
      secretName: alertmanager-tls
  rules:
    - host: alertmanager.home.lobotechworks.pt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
