kubernetes/monitoring/prometheus-stack/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: prometheus-stack
spec:
  parentRefs:
    - name: internal
      namespace: traefik
      sectionName: websecure
  hostnames:
    - grafana.home.lobotechworks.pt
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
